fixed arrow with ternary operator and fixed top section mobile styling

--- a/my-react-portfolio/src/Components/TopSection/TopSection.css
+++ b/my-react-portfolio/src/Components/TopSection/TopSection.css
@@ -1,28 +1,30 @@
 /* Component 1 - Top Section */
 
 .topsection-container {
-  padding-left: 20%;
-  padding-right: 20%;
+  padding: 28% 10% 0 10%;
 }
 
-.topsection-container h1 h2 {
-  padding-bottom: 0;
+.topsection-container h1 {
+  font-size: 30px;
+  text-align: center;
 }
 
 .topsection-container h2 {
   font-size: 18px;
+  text-align: center;
 }
 
-.profile-image {
+.topsection-container p {
+  padding-bottom: 1em;
+  font-size: 16px;
+  text-align: center;
+}
+
+.topsection-container img {
   max-width: 164px;
   max-height: 164px;
   border-radius: 50%;
-  float: left;
-  padding-right: 1em;
-}
-
-.topsection-text {
-  font-size: 14px;
+  text-align: center;
 }
 
 .red-arrow-section {
@@ -43,9 +45,32 @@
   content: url("/Assets/github-hover.png");
 }
 
-/*media query for mobile*/
-@media screen and (max-width: 667px) {
-  img {
+.imageOnBottom {
+  display: none;
+}
+
+.imageOnTop {
+  margin: 0 auto;
+  display: block;
+}
+
+.socialLinks {
+  display: none;
+}
+
+/*media query for desktop - 2 rows */
+@media (min-width: 1025px) {
+  .imageOnTop {
+    display: none;
+    text-align: center;
+  }
+
+  .imageOnBottom {
+    display: block;
     float: left;
+  }
+
+  .socialLinks {
+    display: inline-block;
   }
 }
